--- a/templates/index.j2
+++ b/templates/index.j2
@@ -7,10 +7,10 @@
 
 <body>
     <h1> Jimbo's Gym </h1>
-    [ <a href="index.html">Home</a> |
-    <a href="members.html">Members</a> |
+    [ <a href="index">Home</a> |
+    <a href="members">Members</a> |
     <a href="instructors.html">Instructors</a> |
-    <a href="gyms.html">Gyms</a> |
+    <a href="gyms">Gyms</a> |
     <a href="plans.html">Membership Plans</a> |
     <a href="classes.html">Classes</a> | 
     <a href="class_participants.html">Class Participants</a>]
