made link up top  route to members and index page

--- a/templates/index.j2
+++ b/templates/index.j2
@@ -7,7 +7,7 @@
 
 <body>
     <h1> Jimbo's Gym </h1>
-    [ <a href="index">Home</a> |
+    [ <a href="/">Home</a> |
     <a href="members">Members</a> |
     <a href="instructors.html">Instructors</a> |
     <a href="gyms">Gyms</a> |
