--- a/templates/members.j2
+++ b/templates/members.j2
@@ -46,7 +46,7 @@
 
 <body onload="browseMember()">
 <h1>Members</h1>    
-[ <a href="index">Home</a> |
+[ <a href="/">Home</a> |
 <a href="members">Members</a> |
 <a href="instructors.html">Instructors</a> |
 <a href="gyms">Gyms</a> |
