--- a/templates/index.j2
+++ b/templates/index.j2
@@ -11,7 +11,7 @@
     <a href="members">Members</a> |
     <a href="instructors.html">Instructors</a> |
     <a href="gyms">Gyms</a> |
-    <a href="plans.html">Membership Plans</a> |
+    <a href="plans">Membership Plans</a> |
     <a href="classes.html">Classes</a> | 
     <a href="class_participants.html">Class Participants</a>]
 
