--- a/templates/index.j2
+++ b/templates/index.j2
@@ -9,11 +9,11 @@
     <h1> Jimbo's Gym </h1>
     [ <a href="/">Home</a> |
     <a href="members">Members</a> |
-    <a href="instructors.html">Instructors</a> |
+    <a href="instructors">Instructors</a> |
     <a href="gyms">Gyms</a> |
     <a href="plans">Membership Plans</a> |
-    <a href="classes.html">Classes</a> | 
-    <a href="class_participants.html">Class Participants</a>]
+    <a href="classes">Classes</a> | 
+    <a href="class_participants">Class Participants</a>]
 
     <ul>
         <li>Members - Personal/Contact information for gym members</li>
