--- a/templates/members.j2
+++ b/templates/members.j2
@@ -48,11 +48,11 @@
 <h1>Members</h1>    
 [ <a href="/">Home</a> |
 <a href="members">Members</a> |
-<a href="instructors.html">Instructors</a> |
+<a href="instructors">Instructors</a> |
 <a href="gyms">Gyms</a> |
-<a href="plans.html">Membership Plans</a> |
-<a href="classes.html">Classes</a> | 
-<a href="class_participants.html">Class Participants</a>]
+<a href="plans">Membership Plans</a> |
+<a href="classes">Classes</a> | 
+<a href="class_participants">Class Participants</a>]
 
 <div id="browse">
     <p><a href="#" onClick="showAll()"><strong>Display all forms</strong></a> </p>
