Fix additional deprecated href -> routes

--- a/templates/plans.j2
+++ b/templates/plans.j2
@@ -28,11 +28,11 @@
 <h1>Membership Plans</h1>    
 [ <a href="/">Home</a> |
 <a href="members">Members</a> |
-<a href="instructors.html">Instructors</a> |
+<a href="instructors">Instructors</a> |
 <a href="gyms">Gyms</a> |
-<a href="plans.html">Membership Plans</a> |
-<a href="classes.html">Classes</a> | 
-<a href="class_participants.html">Class Participants</a>]
+<a href="plans">Membership Plans</a> |
+<a href="classes">Classes</a> | 
+<a href="class_participants">Class Participants</a>]
 
 <div id="browse">
     <p><a href="#" onClick="newPlan()"><strong>Add New Membership Plan</strong></a> </p>
