update plan -> add dropdown boxes

--- a/templates/plans.j2
+++ b/templates/plans.j2
@@ -69,9 +69,15 @@
                 <label>Monthly Fee</label> 
                     <input type="decimal" name="monthly_fee" id="monthly_fee" required>
                 <label>Weights/Cardio</label> 
-                    <input type="tinyint" name="weight_cardio" id="weight_cardio" required>
+                    <select name="weight_cardio" id="weight_cardio" required>
+                        <option value=0> 0 </option>
+                        </option value=1> 1 </option>
+                    </select>
                 <label>Spa Room</label> 
-                    <input type="tinyint" name="spa_room" id="spa_room" style="width: 500px;" required>
+                    <select name="spa_room" id="spa_room" required>
+                        <option value=0> 0 </option>
+                        </option value=1> 1 </option>
+                    </select>
                 <p></p>
                 <label>Lap Pool</label>
                     <input type="tinyint" name="lap_pool" id="lap_pool" required>
