Continue Membership Plan "Delete"

--- a/templates/plans.j2
+++ b/templates/plans.j2
@@ -52,8 +52,8 @@
                     {% for key in item.keys() %}
                         <td> {{ item[key] }} </td>
                     {% endfor %}
-                    <td><a href="edit_plan/{{item.Membership Plan ID}}" class="btn btn-default">Edit</a></td>
-                    <td><a href="delete_plan/{{item.Membership Plan ID}}" class="btn btn-default">Delete</a></td>
+                    <td><a href="edit_plan/{{item.Membership_Plan_ID}}" class="btn btn-default">Edit</a></td>
+                    <td><a href="delete_plan/{{item.Membership_Plan_ID}}" class="btn btn-default">Delete</a></td>
                 </tr>
             {% endfor %}
 
