--- a/templates/instructors.j2
+++ b/templates/instructors.j2
@@ -88,7 +88,7 @@
                         {% endfor %}
                         </select>
                 </fieldset>
-                <input class="btn" type="submit" id="addInstructor" value="Add Instructor">
+                <input class="btn" type="submit" name="addInstructor" value="Add Instructor">
                 <input class="btn" type="submit" value="cancel" onClick="browseInstructor()">
         </form>
     </div> <!-- insert -->
