--- a/templates/members.j2
+++ b/templates/members.j2
@@ -103,6 +103,7 @@
                     </select>
                 <label>Gym</label> 
                 <select name="gym_id" id="gym_id">
+                    <option value="0">&nbsp;</option>
                     {% for gym in gyms %}
                         <option value="{{gym['gym_id']}}"> {{gym['gym_id']}} </option>
                     {% endfor %}
