add update operation to classes

--- a/templates/edit_member.j2
+++ b/templates/edit_member.j2
@@ -70,22 +70,9 @@
                 </select>
             </fieldset>
             <input class="btn" type="submit" name="Edit_Member" value="Edit Member">
-            <a href='/members'><input class="btn" type="button" value="cancel"></a
+            <a href='/members'><input class="btn" type="button" value="cancel"></a>
     </form>
 </div> <!-- insert-->
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
