add update for instructors

--- a/templates/edit_class.j2
+++ b/templates/edit_class.j2
@@ -31,7 +31,7 @@
     <p>&nbsp;</p>
     <div id="edit">
     <form method="POST" action="/edit_class/{{data[0].Class_ID}}" id="editClass">
-        <legend><strong>Edit Member</strong></legend>
+        <legend><strong>Edit Class</strong></legend>
             <fieldset class="fields">
                 <label>Class ID: {{data[0].Class_ID}}</label>
                     <input type="hidden" value="{{data[0].Class_ID}}" id="class_id" name="class_id">
