fix href return location

--- a/templates/edit_plan.j2
+++ b/templates/edit_plan.j2
@@ -59,8 +59,8 @@
                         <option value=1> 1 </option>
                     </select>
             </fieldset>
-            <input class="btn" type="submit" name="Edit_Member" value="Edit Member">
-            <a href='/members'><input class="btn" type="button" value="cancel"></a
+            <input class="btn" type="submit" name="Edit_Plan" value="Edit Plan">
+            <a href='/plans'><input class="btn" type="button" value="cancel"></a
     </form>
 </div> <!-- insert-->
 </body>
