Class_participants Delete feature added

--- a/templates/class_participants.j2
+++ b/templates/class_participants.j2
@@ -52,7 +52,7 @@
                     {% for key in item.keys() %}
                         <td> {{ item[key] }} </td>
                     {% endfor %}
-                    <td><a href="delete_plan/{{item.member_class_id}}" class="btn btn-default">Delete</a></td>
+                    <td><a href="delete_class_participants/{{item.Class_Participant_ID}}" class="btn btn-default">Delete</a></td>
                 </tr>
             {% endfor %}
 
