Minor. Formatting of Closing Time field.

--- a/templates/edit_gym.j2
+++ b/templates/edit_gym.j2
@@ -40,9 +40,9 @@
                 <label>Gym Address:</label> 
                     <input type="text" name="gym_address" id="gym_address" value="{{data[0].Address}}" required>
                 <label>Opening Time:</label> 
-                    <input type="time" name="opening_time" id="opening_time" value="{{data[0].OPENS}}" required>
-                <label>Closing Time</label> 
-                    <input type="time" name="closing_time" id="closing_time" value="{{data[0].CLOSES}}"  required>
+                    <input type="time" name="opening_time" id="opening_time" value="{{data[0].CLOSES}}" required>
+                <label>Closing Time:</label> 
+                    <input type="time" name="closing_time" id="closing_time" value="{{data[0].OPENS}}" required>
                 <p></p>
             </fieldset>
             <input class="btn" type="submit" name="Edit_Gym" value="Edit Gym">
