Fix email issue

--- a/templates/edit_instructor.j2
+++ b/templates/edit_instructor.j2
@@ -46,6 +46,8 @@
                 <p></p>
                 <label>Birthday</label> 
                     <input type="date" name="birthday" id="birthday" value="{{data[0].Birthday}}" required>
+                <label>Email</label> 
+                    <input type="email" name="email" id="email" value="{{data[0].Email}}" required>
                 <label>Gym</label> 
                 <select name="gym_id" id="gym_id">
                     <option value="0">&nbsp;</option>
