--- a/templates/instructors.j2
+++ b/templates/instructors.j2
@@ -76,7 +76,7 @@
                     <label>Birthday</label> 
                         <input type="date" name="birthday" id="birthday" required>
                     <label>Email</label> 
-                        <input type="text" name="email" id="email">
+                        <input type="email" name="email" id="email">
                     <label>Phone Number</label> 
                         <input type="text" name="phone_number" id="phone_number" required>
                 
